# session-process-monitor

./: Cargo.toml  README.md
docs/: demo.cast
src/: app.rs  cgroup.rs  guard.rs  health.rs  main.rs  monitor.rs  policy.rs  process.rs  recording.rs  replay.rs  supervisor.rs  ui.rs
tests/: failing_tests.sh  failing_tests_2.sh  failing_tests_3.sh  failing_tests_4.sh  failing_tests_5.sh  failing_tests_6.sh  integration_test.sh  run_all.sh
