[package]
name = "session-process-monitor"
version = "0.2.6"
edition = "2021"
authors = ["Shakudo Inc."]
description = "Process supervisor and TUI for monitoring memory, CPU, and disk I/O in Kubernetes pods — with preemptive OOM guard"
license = "Apache-2.0"
repository = "https://github.com/Shakudo-io/session-process-monitor"
keywords = ["tui", "monitoring", "kubernetes", "process", "profiling"]
categories = ["command-line-utilities", "development-tools::profiling"]
readme = "README.md"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
libc = "0.2"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
dirs = "5.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
